main.css
@font-face {
  font-family: Marvel;
  src: url(./Marvel-Regular.ttf));
}
@viewport{
  width: device-width;
  zoom: 1.0;
}

html{
  background-color: #f0131e;
  background-image: linear-gradient(to bottom, red , yellow);
}
body{
  cursor: url('./Images/prism.png'),auto;
}
h1{
  font-family: Marvel;
}

                              /* CHARACTER LIST */
/* Character list header */
h2, hr {
  text-align: center;
  color: white;
  text-shadow: 2px 2px 10px grey;
  font-family: Marvel;
  text-transform: uppercase;
  font-size: 3em;
  text-decoration: underline;
}
/* flexbox to contain hero img links */
div.container{
  margin-left: auto;
  margin-right: 300px;
  /* background: rgba(0, 0, 0, .6); */
  width: 99.5%;
  height: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-self: flex-start;
  color: white;
  justify-content:space-between;
  border-radius: 10px;
}
.boxes{
  width: 100px;
  height: 230px;
  /* border: 1px solid #000; */
  border-radius: 10px;
  margin: 5px;
  /* box-shadow: 0 8px 6px -6px #312f2d; */
  color: transparent;
  display: block;
  overflow: auto;
  scroll-behavior: none;
}
.boxes:hover{
  width: 310px;
  transform: scale(1.4);
  background: url(./Images/stars.png);
  scroll-behavior: auto;
  position:static;
}
.boxes:hover .info{
  color: white;
  text-align: justify;
}
.info{
  margin-right: 10px;
  margin-left: 3px;
}
#characterPic{
  /* border-radius: 10px 10px 0px 0px; */
  float: left;
  border-radius: 10px 10px 10px 10px;
  box-shadow: 0 8px 6px -6px #312f2d;
  margin-right: 5px;
}
#characterPic:hover{
  border-radius: 10px 10px 0px 0px;
  border-radius: 10px 10px 10px 10px;
}
.name{
  color: white;
  text-align: center;
  font-family: Arial;
  letter-spacing: .3px;
}
/* .name:hover{
  background-color: rgba(255, 255, 255, 0.7);
  border-radius: 10px;
  text-shadow: 0 8px 6px -6px #312f2d;
  border-style: outset;
} */

                                /* SEARCH BAR */
.topNav{
box-shadow: 0 8px 6px -6px #312f2d;
background-image:url(./Images/MarvelBackground.png);
}

/* Search box value */
input[type=text] {
  width: 100px;
  transition: width 0.4s ease-in-out;
}

/* When the input field gets focus, change its width to 40% */
input[type=text]:focus {
  width: 40%;

}

/* Home button */
.topNav a.home{
  font-family: Marvel-Regular;
  text-transform: uppercase;
  font-size: 3em;
  margin-right: 20% ;
  margin-left: 25px;
  color: white;
  text-shadow: 2px 2px 10px grey;
}

.MarvelLogo{
  max-width: 19.1%;
  height: auto;
  float: right;
  padding-top: 0;
  background-color: #f0131e;
  box-shadow: 0 8px 6px -6px #312f2d;

}
#Logo{
  max-width: 100%;
  max-height: 100%;
}

.copyright{
  color: rgba(0,0,0,.7);
  text-shadow: 0 1px rgba(255, 255, 255, 0.1);
  text-align: center;
}
@media only screen and (min-width: 768px){

}

